[package]
name = "bob-bsp"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
defmt = { version = "0.3.2", optional = true }
embedded-hal = "=1.0.0-alpha.10"
hp203b = { path = "./lib/hp203b-rs" }
rp2040-hal = { version = "0.8.2", features = ["eh1_0_alpha"] }

[dev-dependencies]
test-case = "2.2.1"
once_cell = "1.14.0"
rand = "0.8.5"

[features]
default = []
defmt = ["dep:defmt", "rp2040-hal/defmt"]
critical-section = ["rp2040-hal/critical-section-impl"]
